# bitcoin-rust-workshop

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
basics/: cargo.toml
basics/src/: lib.rs  solutions.rs
basics/tests/: 01-setup.rs  02-wallet.rs  03-balance.rs  04-simple-transaction.rs  05-raw-tx-transmit.rs  06-multisig.rs  progress.rs
ln/: cargo.toml
ln/ln-nodes/node-1/: config
ln/ln-nodes/node-2/: config
ln/src/: lib.rs
ln/tests/: 01-configure.rs  02-fund.rs  04-payment.rs  progress.rs
miniscript_workshop/: cargo.toml
miniscript_workshop/src/: lib.rs
miniscript_workshop/tests/: 01-configure.rs  02-pkh.rs  03-multi-desc.rs  04-multi-spend.rs  progress.rs
rln-node/: Cargo.toml
rln-node/src/: bitcoin_client.rs  channel_manager_utils.rs  event_handler.rs  keys_manager.rs  lib.rs  logger.rs  main.rs  node.rs
rln-rpc/: Cargo.toml
rln-rpc/src/: lib.rs
src/: lib.rs
tests/: 01-setup.rs  02-wallet.rs  03-balance.rs  04-simple-transaction.rs  05-raw-tx-transmit.rs  06-multisig.rs  progress.rs
