[package]
name = "rust-bitcoin-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.16.0"
secp256k1 = { version="0.24.1", features=["rand-std"] }

[dev-dependencies]
trybuild = "1.0"
