[package]
name = "rust-bitcoin-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "btc-workshop"
path = "main.rs"

[dependencies]
bitcoin_basics = { path = "basics"}
miniscript_workshop = { path = "miniscript_workshop"}
ln_workshop = { path = "ln"}
ln_node = { path = "rln-node"}
rln_rpc = { path = "rln-rpc"}
